Capitalize instruction names in list

--- a/spec.tex
+++ b/spec.tex
@@ -710,82 +710,82 @@ Ops                   & Formula                                                 
 
 \hline
 \multicolumn{26}{|c|}{24-bit Integer Register-Register Instructions}                                                                                                                                                                                                                                                             \\\hline
-add rd, rs1, rs2      & $\mathrm{rd} \leftarrow \mathrm{rs1} + \mathrm{rs2}$ & 0 & 0 & 0 & 0 & \multicolumn{4}{c|}{rs2}            & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rd}      & 0              & 0                & 0   & 0   & 0   & 0 & 0 & 1 \\
-sub rd, rs1, rs2      & $\mathrm{rd} \leftarrow \mathrm{rs1} - \mathrm{rs2}$ & 0 & 0 & 0 & 0 & \multicolumn{4}{c|}{rs2}            & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rd}      & 0              & 0                & 0   & 0   & 1   & 0 & 0 & 1 \\
-and rd, rs1, rs2      & $\mathrm{rd} \leftarrow \mathrm{rs1} \land \mathrm{rs2}$ & 0 & 0 & 0 & 0 & \multicolumn{4}{c|}{rs2}            & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rd}      & 0              & 0                & 0   & 1   & 0   & 0 & 0 & 1 \\
-xor rd, rs1, rs2      & $\mathrm{rd} \leftarrow \mathrm{rs1} \oplus \mathrm{rs2}$ & 0 & 0 & 0 & 0 & \multicolumn{4}{c|}{rs2}            & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rd}      & 0              & 0                & 0   & 1   & 1   & 0 & 0 & 1 \\
-or rd, rs1, rs2       & $\mathrm{rd} \leftarrow \mathrm{rs1} \lor \mathrm{rs2}$ & 0 & 0 & 0 & 0 & \multicolumn{4}{c|}{rs2}            & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rd}      & 0              & 0                & 1   & 0   & 0   & 0 & 0 & 1 \\
-lsl rd, rs1, rs2      & $\mathrm{rd} \leftarrow \mathrm{rs1} \ll \mathrm{rs2}$ & 0 & 0 & 0 & 0 & \multicolumn{4}{c|}{rs2}            & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rd}      & 0              & 0                & 1   & 0   & 1   & 0 & 0 & 1 \\
-lsr rd, rs1, rs2      & $\mathrm{rd} \leftarrow \mathrm{rs1} \gg \mathrm{rs2}$ & 0 & 0 & 0 & 0 & \multicolumn{4}{c|}{rs2}            & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rd}      & 0              & 0                & 1   & 1   & 0   & 0 & 0 & 1 \\
-asr rd, rs1, rs2      & $\mathrm{rd} \leftarrow \mathrm{rs1} \ggg \mathrm{rs2}$ & 0 & 0 & 0 & 0 & \multicolumn{4}{c|}{rs2}            & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rd}      & 0              & 0                & 1   & 1   & 1   & 0 & 0 & 1 \\
+ADD rd, rs1, rs2      & $\mathrm{rd} \leftarrow \mathrm{rs1} + \mathrm{rs2}$ & 0 & 0 & 0 & 0 & \multicolumn{4}{c|}{rs2}            & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rd}      & 0              & 0                & 0   & 0   & 0   & 0 & 0 & 1 \\
+SUB rd, rs1, rs2      & $\mathrm{rd} \leftarrow \mathrm{rs1} - \mathrm{rs2}$ & 0 & 0 & 0 & 0 & \multicolumn{4}{c|}{rs2}            & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rd}      & 0              & 0                & 0   & 0   & 1   & 0 & 0 & 1 \\
+AND rd, rs1, rs2      & $\mathrm{rd} \leftarrow \mathrm{rs1} \land \mathrm{rs2}$ & 0 & 0 & 0 & 0 & \multicolumn{4}{c|}{rs2}            & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rd}      & 0              & 0                & 0   & 1   & 0   & 0 & 0 & 1 \\
+XOR rd, rs1, rs2      & $\mathrm{rd} \leftarrow \mathrm{rs1} \oplus \mathrm{rs2}$ & 0 & 0 & 0 & 0 & \multicolumn{4}{c|}{rs2}            & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rd}      & 0              & 0                & 0   & 1   & 1   & 0 & 0 & 1 \\
+OR rd, rs1, rs2       & $\mathrm{rd} \leftarrow \mathrm{rs1} \lor \mathrm{rs2}$ & 0 & 0 & 0 & 0 & \multicolumn{4}{c|}{rs2}            & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rd}      & 0              & 0                & 1   & 0   & 0   & 0 & 0 & 1 \\
+LSL rd, rs1, rs2      & $\mathrm{rd} \leftarrow \mathrm{rs1} \ll \mathrm{rs2}$ & 0 & 0 & 0 & 0 & \multicolumn{4}{c|}{rs2}            & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rd}      & 0              & 0                & 1   & 0   & 1   & 0 & 0 & 1 \\
+LSR rd, rs1, rs2      & $\mathrm{rd} \leftarrow \mathrm{rs1} \gg \mathrm{rs2}$ & 0 & 0 & 0 & 0 & \multicolumn{4}{c|}{rs2}            & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rd}      & 0              & 0                & 1   & 1   & 0   & 0 & 0 & 1 \\
+ASR rd, rs1, rs2      & $\mathrm{rd} \leftarrow \mathrm{rs1} \ggg \mathrm{rs2}$ & 0 & 0 & 0 & 0 & \multicolumn{4}{c|}{rs2}            & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rd}      & 0              & 0                & 1   & 1   & 1   & 0 & 0 & 1 \\
 
 \hline
 \multicolumn{26}{|c|}{24-bit Integer Register-Immediate Instructions}                                                                                                                                                                                                                                                             \\\hline
-addi rd, rs1, simm10  & $\mathrm{rd} \leftarrow \mathrm{rs1} + \mathrm{simm10}$ & \multicolumn{8}{c|}{simm10{[}7:0{]}}                        & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rd}      & \multicolumn{2}{c|}{simm10{[}9:8{]}} & 0   & 0   & 0   & 0 & 1 & 1 \\
-andi rd, rs1, simm10  & $\mathrm{rd} \leftarrow \mathrm{rs1} \land \mathrm{simm10}$ & \multicolumn{8}{c|}{simm10{[}7:0{]}}                        & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rd}      & \multicolumn{2}{c|}{simm10{[}9:8{]}} & 0   & 1   & 0   & 0 & 1 & 1 \\
-xori rd, rs1, simm10  & $\mathrm{rd} \leftarrow \mathrm{rs1} \oplus \mathrm{simm10}$ & \multicolumn{8}{c|}{simm10{[}7:0{]}}                        & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rd}      & \multicolumn{2}{c|}{simm10{[}9:8{]}} & 0   & 1   & 1   & 0 & 1 & 1 \\
-ori rd, rs1, simm10   & $\mathrm{rd} \leftarrow \mathrm{rs1} \lor \mathrm{simm10}$ & \multicolumn{8}{c|}{simm10{[}7:0{]}}                        & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rd}      & \multicolumn{2}{c|}{simm10{[}9:8{]}} & 1   & 0   & 0   & 0 & 1 & 1 \\
-lsli rd, rs1, uimm4   & $\mathrm{rd} \leftarrow \mathrm{rs1} \ll \mathrm{uimm4}$ & 0 & 0 & 0 & 0 & \multicolumn{4}{c|}{uimm4{[}3:0{]}} & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rd}      & 0              & 0              & 1   & 0   & 1   & 0 & 1 & 1 \\
-lsri rd, rs1, uimm4   & $\mathrm{rd} \leftarrow \mathrm{rs1} \gg \mathrm{uimm4}$ & 0 & 0 & 0 & 0 & \multicolumn{4}{c|}{uimm4{[}3:0{]}} & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rd}      & 0              & 0              & 1   & 1   & 0   & 0 & 1 & 1 \\
-asri rd, rs1, uimm4   & $\mathrm{rd} \leftarrow \mathrm{rs1} \ggg \mathrm{uimm4}$ & 0 & 0 & 0 & 0 & \multicolumn{4}{c|}{uimm4{[}3:0{]}} & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rd}      & 0              & 0              & 1   & 1   & 1   & 0 & 1 & 1 \\
+ADDI rd, rs1, simm10  & $\mathrm{rd} \leftarrow \mathrm{rs1} + \mathrm{simm10}$ & \multicolumn{8}{c|}{simm10{[}7:0{]}}                        & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rd}      & \multicolumn{2}{c|}{simm10{[}9:8{]}} & 0   & 0   & 0   & 0 & 1 & 1 \\
+ANDI rd, rs1, simm10  & $\mathrm{rd} \leftarrow \mathrm{rs1} \land \mathrm{simm10}$ & \multicolumn{8}{c|}{simm10{[}7:0{]}}                        & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rd}      & \multicolumn{2}{c|}{simm10{[}9:8{]}} & 0   & 1   & 0   & 0 & 1 & 1 \\
+XORI rd, rs1, simm10  & $\mathrm{rd} \leftarrow \mathrm{rs1} \oplus \mathrm{simm10}$ & \multicolumn{8}{c|}{simm10{[}7:0{]}}                        & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rd}      & \multicolumn{2}{c|}{simm10{[}9:8{]}} & 0   & 1   & 1   & 0 & 1 & 1 \\
+ORI rd, rs1, simm10   & $\mathrm{rd} \leftarrow \mathrm{rs1} \lor \mathrm{simm10}$ & \multicolumn{8}{c|}{simm10{[}7:0{]}}                        & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rd}      & \multicolumn{2}{c|}{simm10{[}9:8{]}} & 1   & 0   & 0   & 0 & 1 & 1 \\
+LSLI rd, rs1, uimm4   & $\mathrm{rd} \leftarrow \mathrm{rs1} \ll \mathrm{uimm4}$ & 0 & 0 & 0 & 0 & \multicolumn{4}{c|}{uimm4{[}3:0{]}} & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rd}      & 0              & 0              & 1   & 0   & 1   & 0 & 1 & 1 \\
+LSRI rd, rs1, uimm4   & $\mathrm{rd} \leftarrow \mathrm{rs1} \gg \mathrm{uimm4}$ & 0 & 0 & 0 & 0 & \multicolumn{4}{c|}{uimm4{[}3:0{]}} & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rd}      & 0              & 0              & 1   & 1   & 0   & 0 & 1 & 1 \\
+ASRI rd, rs1, uimm4   & $\mathrm{rd} \leftarrow \mathrm{rs1} \ggg \mathrm{uimm4}$ & 0 & 0 & 0 & 0 & \multicolumn{4}{c|}{uimm4{[}3:0{]}} & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rd}      & 0              & 0              & 1   & 1   & 1   & 0 & 1 & 1 \\
 
 \hline
 \multicolumn{26}{|c|}{24-bit Conditional Branches}                                                                                                                                                                                                                                                             \\\hline
-beq rs1, rs2, simm10  & if $\mathrm{rs1} = \mathrm{rs2}$ then $\mathrm{pc} \leftarrow \mathrm{pc} + \mathrm{simm10}$ & \multicolumn{8}{c|}{simm10{[}7:0{]}}                        & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rs2}     & \multicolumn{2}{c|}{simm10{[}9:8{]}} & 0   & 0   & 1   & 1 & 1 & 1 \\
-bne rs1, rs2, simm10  & if $\mathrm{rs1} \neq \mathrm{rs2}$ then $\mathrm{pc} \leftarrow \mathrm{pc} + \mathrm{simm10}$ & \multicolumn{8}{c|}{simm10{[}7:0{]}}                        & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rs2}     & \multicolumn{2}{c|}{simm10{[}9:8{]}} & 1   & 0   & 1   & 1 & 1 & 1 \\
-blt rs1, rs2, simm10  & if $\mathrm{rs1} < \mathrm{rs2}$ then $\mathrm{pc} \leftarrow \mathrm{pc} + \mathrm{simm10}$ & \multicolumn{8}{c|}{simm10{[}7:0{]}}                        & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rs2}     & \multicolumn{2}{c|}{simm10{[}9:8{]}} & 1   & 1   & 0   & 1 & 1 & 1 \\
-bltu rs1, rs2, simm10 & if $\mathrm{rs1} < \mathrm{rs2}$ then $\mathrm{pc} \leftarrow \mathrm{pc} + \mathrm{simm10}$ & \multicolumn{8}{c|}{simm10{[}7:0{]}}                        & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rs2}     & \multicolumn{2}{c|}{simm10{[}9:8{]}} & 0   & 1   & 0   & 1 & 1 & 1 \\
-ble rs1, rs2, simm10  & if $\mathrm{rs1} \le \mathrm{rs2}$ then $\mathrm{pc} \leftarrow \mathrm{pc} + \mathrm{simm10}$ & \multicolumn{8}{c|}{simm10{[}7:0{]}}                        & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rs2}     & \multicolumn{2}{c|}{simm10{[}9:8{]}} & 1   & 1   & 1   & 1 & 1 & 1 \\
-bleu rs1, rs2, simm10 & if $\mathrm{rs1} \le \mathrm{rs2}$ then $\mathrm{pc} \leftarrow \mathrm{pc} + \mathrm{simm10}$ & \multicolumn{8}{c|}{simm10{[}7:0{]}}                        & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rs2}     & \multicolumn{2}{c|}{simm10{[}9:8{]}} & 0   & 1   & 1   & 1 & 1 & 1 \\
-j simm16              & $\mathrm{pc} \leftarrow \mathrm{pc} + \mathrm{simm16}$ & \multicolumn{16}{c|}{simm16{[}15:0{]}}                                                                                         & 0              & 0              & 0 & 0   & 0   & 1 & 1 & 1 \\
-jal simm16            & $\mathrm{ra} \leftarrow \mathrm{pc} + 4, \mathrm{pc} \leftarrow \mathrm{pc} + \mathrm{simm16}$ & \multicolumn{16}{c|}{simm16{[}15:0{]}}                                                                                         & 0              & 0              & 0 & 0   & 0   & 1 & 1 & 1 \\
+BEQ rs1, rs2, simm10  & if $\mathrm{rs1} = \mathrm{rs2}$ then $\mathrm{pc} \leftarrow \mathrm{pc} + \mathrm{simm10}$ & \multicolumn{8}{c|}{simm10{[}7:0{]}}                        & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rs2}     & \multicolumn{2}{c|}{simm10{[}9:8{]}} & 0   & 0   & 1   & 1 & 1 & 1 \\
+BNE rs1, rs2, simm10  & if $\mathrm{rs1} \neq \mathrm{rs2}$ then $\mathrm{pc} \leftarrow \mathrm{pc} + \mathrm{simm10}$ & \multicolumn{8}{c|}{simm10{[}7:0{]}}                        & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rs2}     & \multicolumn{2}{c|}{simm10{[}9:8{]}} & 1   & 0   & 1   & 1 & 1 & 1 \\
+BLT rs1, rs2, simm10  & if $\mathrm{rs1} < \mathrm{rs2}$ then $\mathrm{pc} \leftarrow \mathrm{pc} + \mathrm{simm10}$ & \multicolumn{8}{c|}{simm10{[}7:0{]}}                        & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rs2}     & \multicolumn{2}{c|}{simm10{[}9:8{]}} & 1   & 1   & 0   & 1 & 1 & 1 \\
+BLTU rs1, rs2, simm10 & if $\mathrm{rs1} < \mathrm{rs2}$ then $\mathrm{pc} \leftarrow \mathrm{pc} + \mathrm{simm10}$ & \multicolumn{8}{c|}{simm10{[}7:0{]}}                        & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rs2}     & \multicolumn{2}{c|}{simm10{[}9:8{]}} & 0   & 1   & 0   & 1 & 1 & 1 \\
+BLE rs1, rs2, simm10  & if $\mathrm{rs1} \le \mathrm{rs2}$ then $\mathrm{pc} \leftarrow \mathrm{pc} + \mathrm{simm10}$ & \multicolumn{8}{c|}{simm10{[}7:0{]}}                        & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rs2}     & \multicolumn{2}{c|}{simm10{[}9:8{]}} & 1   & 1   & 1   & 1 & 1 & 1 \\
+BLEU rs1, rs2, simm10 & if $\mathrm{rs1} \le \mathrm{rs2}$ then $\mathrm{pc} \leftarrow \mathrm{pc} + \mathrm{simm10}$ & \multicolumn{8}{c|}{simm10{[}7:0{]}}                        & \multicolumn{4}{c|}{rs1}            & \multicolumn{4}{c|}{rs2}     & \multicolumn{2}{c|}{simm10{[}9:8{]}} & 0   & 1   & 1   & 1 & 1 & 1 \\
+J simm16              & $\mathrm{pc} \leftarrow \mathrm{pc} + \mathrm{simm16}$ & \multicolumn{16}{c|}{simm16{[}15:0{]}}                                                                                         & 0              & 0              & 0 & 0   & 0   & 1 & 1 & 1 \\
+JAL simm16            & $\mathrm{ra} \leftarrow \mathrm{pc} + 4, \mathrm{pc} \leftarrow \mathrm{pc} + \mathrm{simm16}$ & \multicolumn{16}{c|}{simm16{[}15:0{]}}                                                                                         & 0              & 0              & 0 & 0   & 0   & 1 & 1 & 1 \\
 
 \hline
 \multicolumn{26}{|c|}{24-bit Load and Store Instructions}                                                                                                                                                                                                                                                             \\\hline
-lw rd, simm10(rs)     & $\mathrm{rd} \leftarrow {[}\mathrm{rs} + \mathrm{simm10}{]}$ & \multicolumn{8}{c|}{simm10{[}7:0{]}}                        & \multicolumn{4}{c|}{rs}             & \multicolumn{4}{c|}{rd}      & \multicolumn{2}{c|}{simm10{[}9:8{]}} & 0   & 1   & 0   & 1 & 0 & 1 \\
-lb rd, simm10(rs)     & $\mathrm{rd} \leftarrow {[}\mathrm{rs} + \mathrm{simm10}{]}$ & \multicolumn{8}{c|}{simm10{[}7:0{]}}                        & \multicolumn{4}{c|}{rs}             & \multicolumn{4}{c|}{rd}      & \multicolumn{2}{c|}{simm10{[}9:8{]}} & 1   & 0   & 0   & 1 & 0 & 1 \\
-lbu rd, simm10(rs)    & $\mathrm{rd} \leftarrow {[}\mathrm{rs} + \mathrm{simm10}{]}$ & \multicolumn{8}{c|}{simm10{[}7:0{]}}                        & \multicolumn{4}{c|}{rs}             & \multicolumn{4}{c|}{rd}      & \multicolumn{2}{c|}{simm10{[}9:8{]}} & 0   & 0   & 0   & 1 & 0 & 1 \\
-sw rs, simm10(rd)     & ${[}\mathrm{rd} + \mathrm{simm10}{]} \leftarrow \mathrm{rs}$ & \multicolumn{8}{c|}{simm10{[}7:0{]}}                        & \multicolumn{4}{c|}{rd}             & \multicolumn{4}{c|}{rs}      & \multicolumn{2}{c|}{simm10{[}9:8{]}} & 0 & 1   & 1   & 1 & 0 & 1 \\
-sb rs, simm10(rd)     & ${[}\mathrm{rd} + \mathrm{simm10}{]} \leftarrow \mathrm{rs}$ & \multicolumn{8}{c|}{simm10{[}7:0{]}}                        & \multicolumn{4}{c|}{rd}             & \multicolumn{4}{c|}{rs}      & \multicolumn{2}{c|}{simm10{[}9:8{]}} & 0   & 0   & 1   & 1 & 0 & 1 \\
-li rd, simm10         & $\mathrm{rd} \leftarrow \mathrm{simm10}$ & \multicolumn{8}{c|}{simm10{[}7:0{]}}                        & 0      & 0    & 0    & 0   & \multicolumn{4}{c|}{rd}      & \multicolumn{2}{c|}{simm10{[}9:8{]}} & 1   & 1   & 0   & 1 & 0 & 1 \\
+LW rd, simm10(rs)     & $\mathrm{rd} \leftarrow {[}\mathrm{rs} + \mathrm{simm10}{]}$ & \multicolumn{8}{c|}{simm10{[}7:0{]}}                        & \multicolumn{4}{c|}{rs}             & \multicolumn{4}{c|}{rd}      & \multicolumn{2}{c|}{simm10{[}9:8{]}} & 0   & 1   & 0   & 1 & 0 & 1 \\
+LB rd, simm10(rs)     & $\mathrm{rd} \leftarrow {[}\mathrm{rs} + \mathrm{simm10}{]}$ & \multicolumn{8}{c|}{simm10{[}7:0{]}}                        & \multicolumn{4}{c|}{rs}             & \multicolumn{4}{c|}{rd}      & \multicolumn{2}{c|}{simm10{[}9:8{]}} & 1   & 0   & 0   & 1 & 0 & 1 \\
+LBU rd, simm10(rs)    & $\mathrm{rd} \leftarrow {[}\mathrm{rs} + \mathrm{simm10}{]}$ & \multicolumn{8}{c|}{simm10{[}7:0{]}}                        & \multicolumn{4}{c|}{rs}             & \multicolumn{4}{c|}{rd}      & \multicolumn{2}{c|}{simm10{[}9:8{]}} & 0   & 0   & 0   & 1 & 0 & 1 \\
+SW rs, simm10(rd)     & ${[}\mathrm{rd} + \mathrm{simm10}{]} \leftarrow \mathrm{rs}$ & \multicolumn{8}{c|}{simm10{[}7:0{]}}                        & \multicolumn{4}{c|}{rd}             & \multicolumn{4}{c|}{rs}      & \multicolumn{2}{c|}{simm10{[}9:8{]}} & 0 & 1   & 1   & 1 & 0 & 1 \\
+SB rs, simm10(rd)     & ${[}\mathrm{rd} + \mathrm{simm10}{]} \leftarrow \mathrm{rs}$ & \multicolumn{8}{c|}{simm10{[}7:0{]}}                        & \multicolumn{4}{c|}{rd}             & \multicolumn{4}{c|}{rs}      & \multicolumn{2}{c|}{simm10{[}9:8{]}} & 0   & 0   & 1   & 1 & 0 & 1 \\
+LI rd, simm10         & $\mathrm{rd} \leftarrow \mathrm{simm10}$ & \multicolumn{8}{c|}{simm10{[}7:0{]}}                        & 0      & 0    & 0    & 0   & \multicolumn{4}{c|}{rd}      & \multicolumn{2}{c|}{simm10{[}9:8{]}} & 1   & 1   & 0   & 1 & 0 & 1 \\
 
 \hline
 \multicolumn{26}{|c|}{16-bit Integer Register-Register Instructions}                                                                                                                                                                                                                                                             \\\hline
-mov rd, rs            & $\mathrm{rd} \leftarrow \mathrm{rs}$ & \multicolumn{8}{c|}{---}                                   & \multicolumn{4}{c|}{rs(rs2)}        & \multicolumn{4}{c|}{rd(rs1)} & 1                & 1                & 0   & 0   & 0   & 0 & 0 & 0 \\
-add2 rd, rs           & $\mathrm{rd} \leftarrow \mathrm{rd} + \mathrm{rs}$ & \multicolumn{8}{c|}{---}                                   & \multicolumn{4}{c|}{rs(rs2)}        & \multicolumn{4}{c|}{rd(rs1)} & 1                & 0                & 0   & 0   & 0   & 0 & 0 & 0 \\
-sub2 rd, rs           & $\mathrm{rd} \leftarrow \mathrm{rd} - \mathrm{rs}$ & \multicolumn{8}{c|}{---}                                   & \multicolumn{4}{c|}{rs(rs2)}        & \multicolumn{4}{c|}{rd(rs1)} & 1                & 0                & 0   & 0   & 1   & 0 & 0 & 0 \\
-and2 rd, rs           & $\mathrm{rd} \leftarrow \mathrm{rd} \land \mathrm{rs}$ & \multicolumn{8}{c|}{---}                                   & \multicolumn{4}{c|}{rs(rs2)}        & \multicolumn{4}{c|}{rd(rs1)} & 1                & 0                & 0   & 1   & 0   & 0 & 0 & 0 \\
-xor2 rd, rs           & $\mathrm{rd} \leftarrow \mathrm{rd} \oplus \mathrm{rs}$ & \multicolumn{8}{c|}{---}                                   & \multicolumn{4}{c|}{rs(rs2)}        & \multicolumn{4}{c|}{rd(rs1)} & 1                & 0                & 0   & 1   & 1   & 0 & 0 & 0 \\
-or2 rd, rs            & $\mathrm{rd} \leftarrow \mathrm{rd} \lor \mathrm{rs}$ & \multicolumn{8}{c|}{---}                                   & \multicolumn{4}{c|}{rs(rs2)}        & \multicolumn{4}{c|}{rd(rs1)} & 1                & 0                & 1   & 0   & 0   & 0 & 0 & 0 \\
-lsl2 rd, rs           & $\mathrm{rd} \leftarrow \mathrm{rd} \ll \mathrm{rs}$ & \multicolumn{8}{c|}{---}                                   & \multicolumn{4}{c|}{rs(rs2)}        & \multicolumn{4}{c|}{rd(rs1)} & 1                & 0                & 1   & 0   & 1   & 0 & 0 & 0 \\
-lsr2 rd, rs           & $\mathrm{rd} \leftarrow \mathrm{rd} \gg \mathrm{rs}$ & \multicolumn{8}{c|}{---}                                   & \multicolumn{4}{c|}{rs(rs2)}        & \multicolumn{4}{c|}{rd(rs1)} & 1                & 0                & 1   & 1   & 0   & 0 & 0 & 0 \\
-asr2 rd, rs           & $\mathrm{rd} \leftarrow \mathrm{rd} \ggg \mathrm{rs}$ & \multicolumn{8}{c|}{---}                                   & \multicolumn{4}{c|}{rs(rs2)}        & \multicolumn{4}{c|}{rd(rs1)} & 1                & 0                & 1   & 1   & 1   & 0 & 0 & 0 \\
+MOV rd, rs            & $\mathrm{rd} \leftarrow \mathrm{rs}$ & \multicolumn{8}{c|}{---}                                   & \multicolumn{4}{c|}{rs(rs2)}        & \multicolumn{4}{c|}{rd(rs1)} & 1                & 1                & 0   & 0   & 0   & 0 & 0 & 0 \\
+ADD2 rd, rs           & $\mathrm{rd} \leftarrow \mathrm{rd} + \mathrm{rs}$ & \multicolumn{8}{c|}{---}                                   & \multicolumn{4}{c|}{rs(rs2)}        & \multicolumn{4}{c|}{rd(rs1)} & 1                & 0                & 0   & 0   & 0   & 0 & 0 & 0 \\
+SUB2 rd, rs           & $\mathrm{rd} \leftarrow \mathrm{rd} - \mathrm{rs}$ & \multicolumn{8}{c|}{---}                                   & \multicolumn{4}{c|}{rs(rs2)}        & \multicolumn{4}{c|}{rd(rs1)} & 1                & 0                & 0   & 0   & 1   & 0 & 0 & 0 \\
+AND2 rd, rs           & $\mathrm{rd} \leftarrow \mathrm{rd} \land \mathrm{rs}$ & \multicolumn{8}{c|}{---}                                   & \multicolumn{4}{c|}{rs(rs2)}        & \multicolumn{4}{c|}{rd(rs1)} & 1                & 0                & 0   & 1   & 0   & 0 & 0 & 0 \\
+XOR2 rd, rs           & $\mathrm{rd} \leftarrow \mathrm{rd} \oplus \mathrm{rs}$ & \multicolumn{8}{c|}{---}                                   & \multicolumn{4}{c|}{rs(rs2)}        & \multicolumn{4}{c|}{rd(rs1)} & 1                & 0                & 0   & 1   & 1   & 0 & 0 & 0 \\
+OR2 rd, rs            & $\mathrm{rd} \leftarrow \mathrm{rd} \lor \mathrm{rs}$ & \multicolumn{8}{c|}{---}                                   & \multicolumn{4}{c|}{rs(rs2)}        & \multicolumn{4}{c|}{rd(rs1)} & 1                & 0                & 1   & 0   & 0   & 0 & 0 & 0 \\
+LSL2 rd, rs           & $\mathrm{rd} \leftarrow \mathrm{rd} \ll \mathrm{rs}$ & \multicolumn{8}{c|}{---}                                   & \multicolumn{4}{c|}{rs(rs2)}        & \multicolumn{4}{c|}{rd(rs1)} & 1                & 0                & 1   & 0   & 1   & 0 & 0 & 0 \\
+LSR2 rd, rs           & $\mathrm{rd} \leftarrow \mathrm{rd} \gg \mathrm{rs}$ & \multicolumn{8}{c|}{---}                                   & \multicolumn{4}{c|}{rs(rs2)}        & \multicolumn{4}{c|}{rd(rs1)} & 1                & 0                & 1   & 1   & 0   & 0 & 0 & 0 \\
+ASR2 rd, rs           & $\mathrm{rd} \leftarrow \mathrm{rd} \ggg \mathrm{rs}$ & \multicolumn{8}{c|}{---}                                   & \multicolumn{4}{c|}{rs(rs2)}        & \multicolumn{4}{c|}{rd(rs1)} & 1                & 0                & 1   & 1   & 1   & 0 & 0 & 0 \\
 
 \hline
 \multicolumn{26}{|c|}{16-bit Integer Register-Immediate Instructions}                                                                                                                                                                                                                                                             \\\hline
-addi2 rd, simm6       & $\mathrm{rd} \leftarrow \mathrm{rd} + \mathrm{simm6}$ & \multicolumn{8}{c|}{---}                                   & \multicolumn{4}{c|}{simm6{[}3:0{]}} & \multicolumn{4}{c|}{rd(rs1)} & \multicolumn{2}{c|}{simm6{[}5:4{]}}  & 0   & 0   & 0   & 0 & 1 & 0 \\
-andi2 rd, simm6       & $\mathrm{rd} \leftarrow \mathrm{rd} \land \mathrm{simm6}$ & \multicolumn{8}{c|}{---}                                   & \multicolumn{4}{c|}{simm6{[}3:0{]}} & \multicolumn{4}{c|}{rd(rs1)} & \multicolumn{2}{c|}{simm6{[}5:4{]}}  & 0   & 1   & 0   & 0 & 1 & 0 \\
-lsi rd, simm6         & $\mathrm{rd} \leftarrow \mathrm{simm6}$ & \multicolumn{8}{c|}{---}                                   & \multicolumn{4}{c|}{simm6{[}3:0{]}} & \multicolumn{4}{c|}{rd}      & \multicolumn{2}{c|}{simm6{[}5:4{]}}  & 1   & 1   & 0   & 1 & 0 & 0 \\
-lui rd, simm6         & $\mathrm{rd} \leftarrow (\mathrm{simm6} \ll 10)$ & \multicolumn{8}{c|}{---}                                   & \multicolumn{4}{c|}{simm6{[}3:0{]}} & \multicolumn{4}{c|}{rd}      & \multicolumn{2}{c|}{simm6{[}5:4{]}}  & 0   & 0   & 0   & 1 & 0 & 0 \\
-lsli2 rd, uimm4       & $\mathrm{rd} \leftarrow \mathrm{rd} \ll \mathrm{uimm4}$ & \multicolumn{8}{c|}{---}                                   & \multicolumn{4}{c|}{uimm4{[}3:0{]}} & \multicolumn{4}{c|}{rd(rs1)} & 0              & 0              & 1   & 0   & 1   & 0 & 1 & 0 \\
-lsri2 rd, uimm4       & $\mathrm{rd} \leftarrow \mathrm{rd} \gg \mathrm{uimm4}$ & \multicolumn{8}{c|}{---}                                   & \multicolumn{4}{c|}{uimm4{[}3:0{]}} & \multicolumn{4}{c|}{rd(rs1)} & 0              & 0              & 1   & 1   & 0   & 0 & 1 & 0 \\
-asri2 rd, uimm4       & $\mathrm{rd} \leftarrow \mathrm{rd} \ggg \mathrm{uimm4}$ & \multicolumn{8}{c|}{---}                                   & \multicolumn{4}{c|}{uimm4{[}3:0{]}} & \multicolumn{4}{c|}{rd(rs1)} & 0              & 0              & 1   & 1   & 1   & 0 & 1 & 0 \\
+ADDI2 rd, simm6       & $\mathrm{rd} \leftarrow \mathrm{rd} + \mathrm{simm6}$ & \multicolumn{8}{c|}{---}                                   & \multicolumn{4}{c|}{simm6{[}3:0{]}} & \multicolumn{4}{c|}{rd(rs1)} & \multicolumn{2}{c|}{simm6{[}5:4{]}}  & 0   & 0   & 0   & 0 & 1 & 0 \\
+ANDI2 rd, simm6       & $\mathrm{rd} \leftarrow \mathrm{rd} \land \mathrm{simm6}$ & \multicolumn{8}{c|}{---}                                   & \multicolumn{4}{c|}{simm6{[}3:0{]}} & \multicolumn{4}{c|}{rd(rs1)} & \multicolumn{2}{c|}{simm6{[}5:4{]}}  & 0   & 1   & 0   & 0 & 1 & 0 \\
+LSI rd, simm6         & $\mathrm{rd} \leftarrow \mathrm{simm6}$ & \multicolumn{8}{c|}{---}                                   & \multicolumn{4}{c|}{simm6{[}3:0{]}} & \multicolumn{4}{c|}{rd}      & \multicolumn{2}{c|}{simm6{[}5:4{]}}  & 1   & 1   & 0   & 1 & 0 & 0 \\
+LUI rd, simm6         & $\mathrm{rd} \leftarrow (\mathrm{simm6} \ll 10)$ & \multicolumn{8}{c|}{---}                                   & \multicolumn{4}{c|}{simm6{[}3:0{]}} & \multicolumn{4}{c|}{rd}      & \multicolumn{2}{c|}{simm6{[}5:4{]}}  & 0   & 0   & 0   & 1 & 0 & 0 \\
+LSLI2 rd, uimm4       & $\mathrm{rd} \leftarrow \mathrm{rd} \ll \mathrm{uimm4}$ & \multicolumn{8}{c|}{---}                                   & \multicolumn{4}{c|}{uimm4{[}3:0{]}} & \multicolumn{4}{c|}{rd(rs1)} & 0              & 0              & 1   & 0   & 1   & 0 & 1 & 0 \\
+LSRI2 rd, uimm4       & $\mathrm{rd} \leftarrow \mathrm{rd} \gg \mathrm{uimm4}$ & \multicolumn{8}{c|}{---}                                   & \multicolumn{4}{c|}{uimm4{[}3:0{]}} & \multicolumn{4}{c|}{rd(rs1)} & 0              & 0              & 1   & 1   & 0   & 0 & 1 & 0 \\
+ASRI2 rd, uimm4       & $\mathrm{rd} \leftarrow \mathrm{rd} \ggg \mathrm{uimm4}$ & \multicolumn{8}{c|}{---}                                   & \multicolumn{4}{c|}{uimm4{[}3:0{]}} & \multicolumn{4}{c|}{rd(rs1)} & 0              & 0              & 1   & 1   & 1   & 0 & 1 & 0 \\
 
 \hline
 \multicolumn{26}{|c|}{16-bit Unconditional Jumps}                                                                                                                                                                                                                                                             \\\hline
-jalr rs               & $\mathrm{ra} \leftarrow \mathrm{pc} + 2, \mathrm{pc} \leftarrow \mathrm{rs}$ & \multicolumn{8}{c|}{---}                                   & 0      & 0    & 0    & 0   & \multicolumn{4}{c|}{rs(rs1)} & 0              & 0              & 0 & 1   & 0   & 1 & 1 & 0 \\
-jr rs                 & $\mathrm{pc} \leftarrow \mathrm{rs}$ & \multicolumn{8}{c|}{---}                                   & 0      & 0    & 0    & 0   & \multicolumn{4}{c|}{rs(rs1)} & 0              & 0              & 0 & 0   & 0   & 1 & 1 & 0 \\
-js simm11             & $\mathrm{pc} \leftarrow \mathrm{pc} + \mathrm{simm11}$ & \multicolumn{8}{c|}{---}                                   & \multicolumn{11}{c|}{simm11{[}10:0{]}}                                                                        & 0   & 1   & 1 & 1 & 0 \\
-jsal simm11           & $\mathrm{ra} \leftarrow \mathrm{pc} + 2, \mathrm{pc} \leftarrow \mathrm{pc} + \mathrm{simm11}$ & \multicolumn{8}{c|}{---}                                   & \multicolumn{11}{c|}{simm11{[}10:0{]}}                                                                        & 1   & 1   & 1 & 1 & 0 \\
+JALR rs               & $\mathrm{ra} \leftarrow \mathrm{pc} + 2, \mathrm{pc} \leftarrow \mathrm{rs}$ & \multicolumn{8}{c|}{---}                                   & 0      & 0    & 0    & 0   & \multicolumn{4}{c|}{rs(rs1)} & 0              & 0              & 0 & 1   & 0   & 1 & 1 & 0 \\
+JR rs                 & $\mathrm{pc} \leftarrow \mathrm{rs}$ & \multicolumn{8}{c|}{---}                                   & 0      & 0    & 0    & 0   & \multicolumn{4}{c|}{rs(rs1)} & 0              & 0              & 0 & 0   & 0   & 1 & 1 & 0 \\
+JS simm11             & $\mathrm{pc} \leftarrow \mathrm{pc} + \mathrm{simm11}$ & \multicolumn{8}{c|}{---}                                   & \multicolumn{11}{c|}{simm11{[}10:0{]}}                                                                        & 0   & 1   & 1 & 1 & 0 \\
+JSAL simm11           & $\mathrm{ra} \leftarrow \mathrm{pc} + 2, \mathrm{pc} \leftarrow \mathrm{pc} + \mathrm{simm11}$ & \multicolumn{8}{c|}{---}                                   & \multicolumn{11}{c|}{simm11{[}10:0{]}}                                                                        & 1   & 1   & 1 & 1 & 0 \\
 
 \hline
 \multicolumn{26}{|c|}{16-bit Load and Store Instructions}                                                                                                                                                                                                                                                             \\\hline
-lwsp rd, uimm7(sp)    & $\mathrm{rd} \leftarrow {[}\mathrm{sp} + \mathrm{uimm7}{]}$ & \multicolumn{8}{c|}{---}                                   & \multicolumn{4}{c|}{uimm7{[}4:1{]}} & \multicolumn{4}{c|}{rd}      & \multicolumn{2}{c|}{uimm7{[}6:5{]}}  & 0   & 1   & 0   & 1 & 0 & 0 \\
-swsp rs, uimm7(sp)    & ${[}\mathrm{sp} + \mathrm{uimm7}{]} \leftarrow \mathrm{rs}$ & \multicolumn{8}{c|}{---}                                   & \multicolumn{4}{c|}{uimm7{[}4:1{]}} & \multicolumn{4}{c|}{rs}      & \multicolumn{2}{c|}{uimm7{[}6:5{]}}  & 0   & 1   & 1   & 1 & 0 & 0 \\
+LWSP rd, uimm7(sp)    & $\mathrm{rd} \leftarrow {[}\mathrm{sp} + \mathrm{uimm7}{]}$ & \multicolumn{8}{c|}{---}                                   & \multicolumn{4}{c|}{uimm7{[}4:1{]}} & \multicolumn{4}{c|}{rd}      & \multicolumn{2}{c|}{uimm7{[}6:5{]}}  & 0   & 1   & 0   & 1 & 0 & 0 \\
+SWSP rs, uimm7(sp)    & ${[}\mathrm{sp} + \mathrm{uimm7}{]} \leftarrow \mathrm{rs}$ & \multicolumn{8}{c|}{---}                                   & \multicolumn{4}{c|}{uimm7{[}4:1{]}} & \multicolumn{4}{c|}{rs}      & \multicolumn{2}{c|}{uimm7{[}6:5{]}}  & 0   & 1   & 1   & 1 & 0 & 0 \\
 
 \hline
 \multicolumn{26}{|c|}{Others}                                                                                                                                                                                                                                                                    \\\hline
-nop                   &                   ---                                               & \multicolumn{8}{c|}{---}                                   & 0      & 0    & 0    & 0   & 0    & 0  & 0  & 0  & 0                & 0              & 0 & 0 & 0 & 0 & 0 & 0\\\hline
+NOP                   &                   ---                                               & \multicolumn{8}{c|}{---}                                   & 0      & 0    & 0    & 0   & 0    & 0  & 0  & 0  & 0                & 0              & 0 & 0 & 0 & 0 & 0 & 0\\\hline
 \end{longtable}
 \end{landscape}
 
